--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASS=admin
-DB_NAME=test
+DB_HOST=79.174.88.37
+DB_PORT=18175
+DB_USER=clicker_user
+DB_PASS=FuNZe$b9DIw$
+DB_NAME=clicker_db
