--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+aiomysql==0.2.0
 annotated-types==0.6.0
 anyio==4.3.0
-aiomysql==0.2.0
+asyncpg==0.29.0
 bidict==0.23.1
 blinker==1.8.1
 certifi==2024.2.2
@@ -34,16 +35,20 @@ python-dotenv==1.0.1
 python-engineio==4.9.0
 python-multipart==0.0.9
 python-socketio==5.11.2
+pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.4
 rich==13.7.1
 shellingham==1.5.4
 simple-websocket==1.0.0
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.30
 starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.11.0
+tzdata==2024.1
+tzlocal==5.2
 ujson==5.9.0
 uvicorn==0.29.0
 watchfiles==0.21.0
