--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+aiofiles==23.2.1
+aiogram==3.6.0
+aiohttp==3.9.5
 aiomysql==0.2.0
+aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.3.0
-asyncpg==0.29.0
+attrs==23.2.0
 bidict==0.23.1
 blinker==1.8.1
 certifi==2024.2.2
@@ -13,6 +17,7 @@ dnspython==2.6.1
 email_validator==2.1.1
 fastapi==0.111.0
 fastapi-cli==0.0.2
+frozenlist==1.4.1
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
@@ -21,9 +26,11 @@ httpx==0.27.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
+magic-filter==1.0.12
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+multidict==6.0.5
 orjson==3.10.3
 pycparser==2.22
 pydantic==2.7.1
@@ -55,3 +62,4 @@ watchfiles==0.21.0
 websockets==12.0
 Werkzeug==3.0.3
 wsproto==1.2.0
+yarl==1.9.4
