--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 token = "6913855150:AAHw0WTQFoAisSbv3ZnTIyK87BU8k7csq5Y"
-DB_HOST=79.174.88.37
-DB_PORT=18175
-DB_USER=clicker_user
-DB_PASS=FuNZe$b9DIw$
-DB_NAME=clicker_db
+DB_HOST=147.45.237.194
+DB_PORT=5432
+DB_USER=gen_user
+DB_PASS=%3D%7Cp%2F%5C~%5Ee8TL%7C8)
+DB_NAME=default_db
