--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 aiofiles==23.2.1
 aiogram==3.6.0
 aiohttp==3.9.5
-aiomysql==0.2.0
 aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.3.0
+asyncpg==0.29.0
 attrs==23.2.0
 bidict==0.23.1
 blinker==1.8.1
